--- a/app/src/main/res/layout/item_vote.xml
+++ b/app/src/main/res/layout/item_vote.xml
@@ -15,6 +15,7 @@
 
         <ImageView
             android:id="@+id/ivPosterVote"
+            android:transitionName="profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:srcCompat="@tools:sample/avatars" />
