--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -10,6 +10,7 @@
 
     <ImageView
         android:id="@+id/ivPoster"
+        android:transitionName="poster"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         tools:srcCompat="@tools:sample/avatars" />
@@ -25,10 +26,12 @@
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:transitionName="title"
         tools:text="Fast And Furious 9 : Hobbs And Shaw" />
 
     <TextView
         android:id="@+id/tvOverview"
+        android:transitionName="overview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTitle"
