--- a/app/src/main/res/layout/item_vote.xml
+++ b/app/src/main/res/layout/item_vote.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,6 +20,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:srcCompat="@tools:sample/avatars" />
+
+        <ImageView
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:layout_gravity="center"
+            android:src="@android:drawable/ic_media_play"
+            android:id="@+id/img" />
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
