--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -6,13 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="7dp"
-    android:layout_marginBottom="7dp">
+    android:layout_marginBottom="7dp"
+    android:background="@color/black_variant">
 
     <ImageView
         android:id="@+id/ivPoster"
-        android:transitionName="poster"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:transitionName="poster"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
